Fixed layout issues. Fixed bullets. Added analytics.

--- a/site/public/stylesheets/toerdesol.css
+++ b/site/public/stylesheets/toerdesol.css
@@ -38,7 +38,8 @@ body {
 	padding: 10px 0 30px 0;
 }
 
-h1 {
+h1 a {
+	display: block;
 	width: 400px;
 	height: 110px;
 	position: relative;
